Finished Hobbies section and updated clubs section
Changed media section to hobbies and added gardening, reading, and gaming. Also centered clubs boxes and added icons for cogs and blueprint.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <a class="nav-link nav-link-fade-up" href="#Introduction">INTRODUCTION</a>
           <a class="nav-link nav-link-fade-up" href="#Projects">PROJECTS</a>
           <a class="nav-link nav-link-fade-up" href="#Clubs">CLUBS</a>
-          <a class="nav-link nav-link-fade-up" href="#Media">MEDIA</a>
+          <a class="nav-link nav-link-fade-up" href="#Hobbies">HOBBIES</a>
         </ul>
       </div>
     </nav>
@@ -120,14 +120,16 @@
         <div class="boxcolumn">
         <div id="ClubCOGS">
             <h3> COGS </h3>
-            <p3> COGS, or the Creation of Games Society, is a club focused on creating a community where artists, musicians, game designers, and programmers can come together to create video games. Members usually work on one big project throughout the semester while sometimes there are events such as Game Jams or Firesides where people can be challenged to create games with certain themes or rules. </p3>
-            <p3> For example, for the 2021 Scarlet Knights Game Jam, we had one week to create a game surrounding the theme of “jam” and had to create the project using Unity and C#. To follow the theme, my team decided that it would be fun to create a platformer where we have two players and one player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that could bounce players, enemies, and sound waves. This event was very challenging but also a ton of fun and I learned a significant amount about working with different people with different skillsets. </p3>
+            <img class="clubimg" src="images/cogs.PNG" alt="COGS Icon.">
+            <p3> <i>COGS</i>, or the <i>Creation of Games Society</i>, is a club focused on creating a community where artists, musicians, game designers, and programmers can come together to create video games. Members usually work on one big project throughout the semester while sometimes there are events such as Game Jams or Firesides where people can be challenged to create games with certain themes or rules. </p3>
+            <p3> For example, for the 2021 Scarlet Knights Game Jam, we had one week to create a game surrounding the theme of jam and had to create the project using <b>Unity</b> and <b>C#</b>. To follow the theme, my team decided that it would be fun to create a platformer where we have two players and one player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that could bounce players, enemies, and sound waves. This event was very challenging but also a ton of fun and I learned a significant amount about working with different people with different skillsets. </p3>
             <p3>If you want to learn more about Jammin' Jelly, the Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank" style="color: #000000"> here</a>!</p3>
         </div>
         <div id="ClubBlueprint">
             <h3> Blueprint </h3>
-            <p3> Blueprint seeks to promote innovation and creativity by bringing together groups of product managers, designers, and engineers to build products. Groups are student led and focus on creating one application throughout a semester/school year. </p3>
-            <p3> For example, a project I worked on with another engineer was a cooking quiz app. The quiz was made in Java using Android Studio and was essentially a small app that you would answer cooking questions with. It featured questions like “What is the world’s most expensive spice?” (as of 2021 - saffron) and would keep track how many times the user answered correctly. This app was actually the first time I worked simultaneously with another programmer using Github and I learned how to code efficiently with a partner.</p3>
+            <img class="clubimg" src="images/blueprint.PNG" alt="Blueprint Icon.">
+            <p3> <i>Blueprint</i> seeks to promote innovation and creativity by bringing together groups of product managers, designers, and engineers to build products. Groups are student led and focus on creating one application throughout a semester/school year. </p3>
+            <p3> For example, a project I worked on with another engineer was a cooking quiz app. The quiz was made in <b>Java</b> using <b>Android Studio</b> and was essentially a small app that you would answer cooking questions with. It featured questions like <q>What is the world’s most expensive spice?</q> (as of 2021 - saffron) and would keep track how many times the user answered correctly. This app was actually the first time I worked simultaneously with another programmer using Github and I learned how to code efficiently with a partner.</p3>
             <p3>If you want to learn more about the cooking quiz, the Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank" style="color: #000000"> here</a>!</p3>
         </div>
         </div>
@@ -140,11 +142,26 @@
     <br>
     <br>
     <br>
-      <section id = "Media">
-        <h1>Media</h1>
-        <p1>Here, I'll go over the books I am currently reading and some of my favorites that I have read!</p1>
-        <p1> I am currently reading: </p1>
-        <img src="images/thewitchercover.PNG" alt="Cover of The Witcher." class="witcherimg" onmouseover="witcherHover(this);" onmouseout="witcherUnhover(this);">
+      <section id = "Hobbies">
+        <h1>Hobbies</h1>
+        <p1>Here, I'll go over the things I do for fun!</p1>
+        <div class="boxcolumn">
+        <div id="HobbyPlant">
+            <h3> Gardening </h3>
+            <img class="clubimg" src="images/gardening.PNG" alt="Gardening Icon.">
+            <p3> I recently got very into indoor gardening! I found that taking care of a plant and watching it grow and prosper feels incredibly rewarding and satisfying. While I have the do and don’ts of indoor gardening down, I know I still have a lot more to learn about individual plant life and want to start gardening outside. At the moment, I have a boston fern, a basil plant, and ------- but I look forward to branching out and finding new kinds of plants to take care of. </p3>
+        </div>
+        <div id="HobbyBook">
+            <h3> Reading </h3>
+            <img class="clubimg" src="images/book.PNG" alt="Reading Icon.">
+            <p3> I have always loved reading since I was a little kid and try to find time to read a few pages everyday. I love fiction and true crime but every once in a while, I pick up a self help book to try and learn a new skill/topic. Some of my favorite books are the <i>Artemis Fowl</i> series (Eoin Colfer), <i>In Cold Blood</i> (Truman Capote), <i>Sofia Petrovna</i> (Lydia Chukovskaya), and <i>Mythology</i> (Edith Hamilton). I am currently reading <i>The Witcher</i> series (Andrzej Sapkowski) and have just moved onto <i>The Tower of the Swallow</i>. </p3>
+        </div>
+        <div id="HobbyGame">
+            <h3> Gaming </h3>
+            <img class="clubimg" src="images/videogames.png" alt="Videogames Icon.">
+            <p3> A very popular hobby nowadays, I love playing video games with friends in my free time. The game I have predominantly been playing almost my entire life is <i>League of Legends</i> as I find the strategy and teamplay exhilarating and look up to Riot Games as an incredible company (despite its flaws). I also look up to Klei Entertainment for their game, <i>Don’t Starve Together</i>, that I enjoyed so much that I even made mods like unlocking seasonal content and changing the look of creatures in order to refine gameplay to my personal liking. </p3>
+        </div>
+        </div>
       </section>
     </div>
   </body>
