--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         </ul>
       </div>
     </nav>
-    <div class="Title">
-      <section id="Introduction">
+    <br>
+    <br>
+    <section id="Introduction">
+      <br>
+      <div class="Title">
+        <br>
         <h1>Hey, I'm David Dong!</h1>
         <br>
         <p>And you're on my website! If you didn't know, I am currently a student at Rutgers University majoring in Computer Science and Physics. I chose these majors because I love learning new things and what better things to learn then computer science which is everywhere and physics which is everything!</p>
@@ -36,7 +40,7 @@
             <img src="images/linkedinicon.png" alt="Linkedin." class="iconimg">
           </a>
         </div>
-      </section>
+    </section>
     </div>
     <br>
     <br>
@@ -56,19 +60,19 @@
               <h2>Pokemon Decoy (High School)</h2>
               <img src="images/pokemondecoy.PNG" alt="Pokemon decoy with a shield effect triggering on the player." class="soloprojectimg" width="80%" height="80%">
               <br>
-              <p2>&emsp;&emsp;Pokemon decoy was a project I worked on in high school with Benjamin Lifshey. The game used Replit as the platform of the website and <b>Javascript</b> (with <b>HTML</b> and <b>CSS</b> as the basis) as the primary language. As the name suggests, the game was made to mimic Pokemon with two players going against each other with the goal of setting the enemy's health bar to 0. Player 1 (Triangle) has the four abilities seen above while the Attempted Pentagon has two abilities being an ice beam and a heal of its own.</p2>
+              <p2>&emsp;&emsp;Pokemon decoy was a project I worked on in high school with Benjamin Lifshey. The game used Replit as the platform of the website and <b>Javascript</b> (with <b>HTML</b> and <b>CSS</b> as the basis) as the primary language. As the name suggests, the game was made to mimic Pokemon with two players going against each other with the goal of setting the enemy's health bar to 0. Player 1 (Triangle) has the four abilities seen above while the Attempted Pentagon has two abilities being an ice beam and a heal of its own. </p2>
               <p2>&emsp;&emsp;This was the first project I programmed that I was really happy about. It was the first time I programmed in Javascript and I learned a significant amount about the basis of coding. While I do not remember struggling with anything in particular, looking back at the program and the actual game - the whole thing was terribly inefficient. Looking past the fact that there is no indication about how to use each player's abilities and the website was not built with different screen sizes in mind, the organization and execution of the code left many areas prone to bugs and could have been faster if any methods were used.</p2>
               <p2>&emsp;&emsp;Looking past the inefficiencies, my favorite part of the project was the sheer attention to detail. Buttons light up when pressed and each player's health bar would shake when they take damage. Also when players landed a critical strike it would be displayed in Japanese. Also the game could be played in Japanese. If I were to come back to the project, I would definitely build it in another language that fit game development better like C#.</p2>
               <br>
-              <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/" target="_blank"> here</a>. Use QWER (in that order) for Triangle’s abilities and AS for Attempted Pentagon’s abilities.</p2>
+              <p2>I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/" target="_blank"> here</a>. Use QWER (in that order) for Triangle’s abilities and AS for Attempted Pentagon’s abilities. </p2>
             </div>
           </div>
           <div class="mySlides fade">
             <div id="ProjectBox">
               <h2>Text Pop</h2>
               <div class="column">
-              <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
-              <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
+                <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
+                <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
               </div>
               <br>
               <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
@@ -78,8 +82,8 @@
             <div id="ProjectBox">
               <h2>Discord Bot</h2>
               <div class="column">
-              <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
-              <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
+                <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
+                <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
               </div>
               <br>
               <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
@@ -89,8 +93,8 @@
             <div id="ProjectBox">
               <h2>Personal Website</h2>
               <div class="column">
-              <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
-              <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
+                <img src="images/quizapp2.PNG" alt="App asking for the user's name." class="projectimg" width="20%" height="20%">
+                <img src="images/quizapp1.PNG" alt="First quiz question asking about noodles." class="projectimg" width="20%" height="20%">
               </div>
               <br>
               <p2> Pokemon decoy was a project I worked on while in high school and was the enterprise that made me want to pursue computer science. The game was built in HTML, CSS, and Javascript and mimics the combat in Pokemon. Players would take turns casting their abilities and the first player whose health bar goes to 0 loses. This project is not optimal at all and misses features like telling players how to actually use their abilities (QWER for triangle abilities and AS for attempted pentagon). Otherwise, I still remember this project fondly due to its sheer attention to detail such as the health bar of players shaking when damaged and buttons flashing when pressed. The website also has a feature that allows it to be played in Japanese. I believe the website is still running and, if it is, you can access it <a href="https://narrowsilkycgi--daviddong1.repl.co/"> here </a>. </p2>
@@ -106,63 +110,78 @@
           <span class="dot" onclick="currentSlide(4)"></span>
         </div>
       </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-      <section id = "Clubs">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <section id="Clubs">
         <h1>Clubs</h1>
         <p1>Here, I'll go over the relevant clubs I attend at Rutgers University! I will give a short description of the club then go over a project I worked on in each club.</p1>
         <div class="boxcolumn">
-        <div id="ClubCOGS">
+          <div id="ClubCOGS">
             <h3> COGS </h3>
             <img class="clubimg" src="images/cogs.PNG" alt="COGS Icon.">
-            <p3> <i>COGS</i>, or the <i>Creation of Games Society</i>, is a club focused on creating a community where artists, musicians, game designers, and programmers can come together to create video games. Members usually work on one big project throughout the semester while sometimes there are events such as Game Jams or Firesides where people can be challenged to create games with certain themes or rules. </p3>
+            <p3>
+              <i>COGS</i>, or the <i>Creation of Games Society</i>, is a club focused on creating a community where artists, musicians, game designers, and programmers can come together to create video games. Members usually work on one big project throughout the semester while sometimes there are events such as Game Jams or Firesides where people can be challenged to create games with certain themes or rules.
+            </p3>
             <p3> For example, for the 2021 Scarlet Knights Game Jam, we had one week to create a game surrounding the theme of jam and had to create the project using <b>Unity</b> and <b>C#</b>. To follow the theme, my team decided that it would be fun to create a platformer where we have two players and one player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that could bounce players, enemies, and sound waves. This event was very challenging but also a ton of fun and I learned a significant amount about working with different people with different skillsets. </p3>
-            <p3>If you want to learn more about Jammin' Jelly, the Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank" style="color: #000000"> here</a>!</p3>
-        </div>
-        <div id="ClubBlueprint">
+            <p3>If you want to learn more about Jammin' Jelly, the Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank" style="color: #000000"> here</a>! </p3>
+          </div>
+          <div id="ClubBlueprint">
             <h3> Blueprint </h3>
             <img class="clubimg" src="images/blueprint.PNG" alt="Blueprint Icon.">
-            <p3> <i>Blueprint</i> seeks to promote innovation and creativity by bringing together groups of product managers, designers, and engineers to build products. Groups are student led and focus on creating one application throughout a semester/school year. </p3>
-            <p3> For example, a project I worked on with another engineer was a cooking quiz app. The quiz was made in <b>Java</b> using <b>Android Studio</b> and was essentially a small app that you would answer cooking questions with. It featured questions like <q>What is the world’s most expensive spice?</q> (as of 2021 - saffron) and would keep track how many times the user answered correctly. This app was actually the first time I worked simultaneously with another programmer using Github and I learned how to code efficiently with a partner.</p3>
-            <p3>If you want to learn more about the cooking quiz, the Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank" style="color: #000000"> here</a>!</p3>
-        </div>
+            <p3>
+              <i>Blueprint</i> seeks to promote innovation and creativity by bringing together groups of product managers, designers, and engineers to build products. Groups are student led and focus on creating one application throughout a semester/school year.
+            </p3>
+            <p3> For example, a project I worked on with another engineer was a cooking quiz app. The quiz was made in <b>Java</b> using <b>Android Studio</b> and was essentially a small app that you would answer cooking questions with. It featured questions like <q>What is the world's most expensive spice?</q> (as of 2021 - saffron) and would keep track how many times the user answered correctly. This app was actually the first time I worked simultaneously with another programmer using Github and I learned how to code efficiently with a partner. </p3>
+            <p3>If you want to learn more about the cooking quiz, the Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank" style="color: #000000"> here</a>! </p3>
+          </div>
         </div>
       </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-      <section id = "Hobbies">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <section id="Hobbies">
         <h1>Hobbies</h1>
         <p1>Here, I'll go over the things I do for fun!</p1>
         <div class="boxcolumn">
-        <div id="HobbyPlant">
+          <div id="HobbyPlant">
             <h3> Gardening </h3>
-            <img class="clubimg" src="images/gardening.PNG" alt="Gardening Icon.">
-            <p3> I recently got very into indoor gardening! I found that taking care of a plant and watching it grow and prosper feels incredibly rewarding and satisfying. While I have the do and don’ts of indoor gardening down, I know I still have a lot more to learn about individual plant life and want to start gardening outside. At the moment, I have a boston fern, a basil plant, and ------- but I look forward to branching out and finding new kinds of plants to take care of. </p3>
-        </div>
-        <div id="HobbyBook">
+            <img class="clubimg" src="images/gardening.png" alt="Gardening Icon.">
+            <p3> I recently got very into indoor gardening! I found that taking care of a plant and watching it grow and prosper feels incredibly rewarding and satisfying. While I have the do and don'ts of indoor gardening down, I know I still have a lot more to learn about individual plant life and want to start gardening outside. At the moment, I have a boston fern, a basil plant, and ------- but I look forward to branching out and finding new kinds of plants to take care of. </p3>
+          </div>
+          <div id="HobbyBook">
             <h3> Reading </h3>
-            <img class="clubimg" src="images/book.PNG" alt="Reading Icon.">
+            <img class="clubimg" src="images/book.png" alt="Reading Icon.">
             <p3> I have always loved reading since I was a little kid and try to find time to read a few pages everyday. I love fiction and true crime but every once in a while, I pick up a self help book to try and learn a new skill/topic. Some of my favorite books are the <i>Artemis Fowl</i> series (Eoin Colfer), <i>In Cold Blood</i> (Truman Capote), <i>Sofia Petrovna</i> (Lydia Chukovskaya), and <i>Mythology</i> (Edith Hamilton). I am currently reading <i>The Witcher</i> series (Andrzej Sapkowski) and have just moved onto <i>The Tower of the Swallow</i>. </p3>
-        </div>
-        <div id="HobbyGame">
+          </div>
+          <div id="HobbyGame">
             <h3> Gaming </h3>
             <img class="clubimg" src="images/videogames.png" alt="Videogames Icon.">
-            <p3> A very popular hobby nowadays, I love playing video games with friends in my free time. The game I have predominantly been playing almost my entire life is <i>League of Legends</i> as I find the strategy and teamplay exhilarating and look up to Riot Games as an incredible company (despite its flaws). I also look up to Klei Entertainment for their game, <i>Don’t Starve Together</i>, that I enjoyed so much that I even made mods like unlocking seasonal content and changing the look of creatures in order to refine gameplay to my personal liking. </p3>
-        </div>
+            <p3> A very popular hobby nowadays, I love playing video games with friends in my free time. The game I have predominantly been playing almost my entire life is <i>League of Legends</i> as I find the strategy and teamplay exhilarating and look up to Riot Games as an incredible company (despite its flaws). I also look up to Klei Entertainment for their game, <i>Don't Starve Together</i>, that I enjoyed so much that I even made mods like unlocking seasonal content and changing the look of creatures in order to refine gameplay to my personal liking. </p3>
+          </div>
         </div>
       </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+    <div class="footer">
+      <p>© 2021 David Dong</p>
     </div>
   </body>
   <script src="scripts.js"></script>
