Finished Projects and updated background

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </ul>
       </div>
     </nav>
+    <div class="TotalBackground">
     <br>
     <br>
     <section id="Introduction">
@@ -41,7 +42,6 @@
           </a>
         </div>
     </section>
-    </div>
     <br>
     <br>
     <br>
@@ -80,9 +80,9 @@
               <br>
               <p2>&emsp;&emsp;Text Pop was a game I made using <b>Unity</b> and <b>C#</b>. The goal of the game is to avoid obstacles by moving your mouse to control the player and pressing keys to pop incoming hazards. (The guide to the gameplay is in one of the images above). The game features multiple difficulty levels and features a high score system for all three difficulties. The longer you survive the more points you get!</p2>
               <p2>&emsp;&emsp;My goal for Text Pop was to create a game that I could solely make myself. I wanted to put my Unity knowledge and programming skills to the test and see if I could make a simple game that was challenging and fun to play. Due to my knowledge of C# I was able to program a significant amount of the project relatively quickly but near the end of the development I ran into the ninety-ninety rule. Essentially, when I thought I was nearly done with the everything, I learned the hard way that finalizing the game by building and running the application takes a significant amount of time in itself and, like the ninety-ninety rule says, took just as much time finalizing the game as it did building the entire thing.</p2>
-              <p2>&emsp;&emsp;Despite the challenges of the project, I am very happy with the final product. The game is very simplistic but it was the first game I’ve made that has features you’d see in other games like music, settings, high scores, and etc. Nevertheless, my favorite part of the project, by far, is the look. The color of each hazard is associated with an RGB value that changes based on the duration of the game, the speed of the hazard, and the value of its key. That means each hazard has a unique color that even changes as the game progresses. I thought this made the game look visually appealing and even helps the player keep track of how long they have been playing. While Text Pop is a finished game, if I were to add anything, I would add an achievement system where the player can unlock different colors based on their high scores for each difficulty mode.</p2>
+              <p2>&emsp;&emsp;Despite the challenges of the project, I am very happy with the final product. The game is very simplistic but it was the first game I've made that has features you'd see in other games like music, settings, high scores, etc. Nevertheless, my favorite part of the project, by far, is the look. The color of each hazard is associated with an RGB value that changes based on the duration of the game, the speed of the hazard, and the value of its key. That means each hazard has a unique color that even changes as the game progresses. I thought this made the game look visually appealing and even helps the player keep track of how long they have been playing. While Text Pop is a finished game, if I were to add anything, I would add an achievement system where the player can unlock different colors based on their high scores for each difficulty mode.</p2>
               <br>
-              <p2>The Github repository of the game is <a href="https://github.com/DavidD-Fleming/TextPop" target="_blank">here</a> and you can play it yourself by downloading it <a href="Text Pop Game.zip" download>here</a> (Windows only)!</p2>
+              <p2>The Github repository of the game is <a href="https://github.com/DavidD-Fleming/TextPop" target="_blank">here</a> and you can play it yourself by downloading it <a href="Text Pop Game.zip" download>here</a> (Windows only).</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -90,11 +90,10 @@
               <h2>First Person Prototype</h2>
               <img src="images/firstpersonhaven.PNG" alt="A landed smoke in Haven grass." class="soloprojectimg" width="80%" height="80%">
               <br>
-              <p2>&emsp;&emsp;Some of my fondest memories come from playing around with Discord bots that could do all kinds of really cool commands. However, as time passed, almost all the bots I used to use were discontinued or out of date. That was the reason why I decided to make Jack, a Discord bot that could do a plethora of different commands from shapeshifting into certain users to parroting dialogue.</p2>
-              <p2>&emsp;&emsp;Jack was made using <b>Javascript</b>, <b>Node.js</b>, and <b>discord.js</b>. The hardest part of the project was just getting used to Node.js and Javascript as, at the time, I had very little experience with both. With some time, I was able to get used to everything and eventually started implementing discord.js to get the bot running and functional.</p2>
-              <p2>&emsp;&emsp;Jack was made with scaling in mind so it could feature a large number of different commands without slowing down too much or negatively affecting other commands. In fact, Jack was also made so adding a new command would be isolated from the bot’s main operations so there would not be any weird or unexpected effects from giving the bot a new feature. My favorite part of the bot is definitely its ability to make memes instantly. All you would need to do is pick the template, choose what you want the meme to say, and Jack will output it in Discord. I added all the features I could think of already but in the future, I look forward to thinking of new commands and adding it to the bot whenever I can!</p2>
+              <p2>&emsp;&emsp;This first person prototype was built using <b>Unity</b> and <b>C#</b>. The goal of the project is to fix the code used by Brackeys (popular Unity youtuber) for his first person movement video and implement abilities used by Jett (from Valorant) to test its functionality. The foundation of the code mirrors the one used by Brackeys but almost all of it was reworked so movement wouldn't be as clunky and remove bugs such as the player being able to walk into the air. Then, there is an additional script that allows the player to access abilities used by Jett such as dashing, throwing knives, throwing smokes, etc.</p2>
+              <p2>&emsp;&emsp;The most challenging part of the project is also my favorite, which is implementing Jett’s abilities. While most of them are pretty straightforward, she has one where she throws a smoke ball that expands when it collides with terrain. The difficult part of the smoke ball is that the player is able to guide it while it is flying in the air. Long story short, I had to learn and use quaternions which is a high level physics mechanic in order to get the smoke ball to rotate and move appropriately. If I were to come back to this project, I would utilize this prototype as the foundation to create movement for a fully realized first person game.</p2>
               <br>
-              <p2>The Github repository of Jack is <a href="https://github.com/DavidD-Fleming/JackOfAllBot" target="_blank">here</a>!</p2>
+              <p2>The Github repository of this first person prototype is <a href="https://github.com/DavidD-Fleming/FirstPersonPrototype" target="_blank">here</a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -105,11 +104,11 @@
                 <img src="images/discordbotmeme.PNG" alt="Pigeon meme talking about how this project was just done to make instant memes." class="groupprojectimg" width="52%" height="50%">
               </div>
               <br>
-              <p2>&emsp;&emsp;Some of my fondest memories come from playing around with Discord bots that could do all kinds of really cool commands. However, as time passed, almost all the bots I used to use were discontinued or out of date. That was the reason why I decided to make Jack, a Discord bot that could do a plethora of different commands from shapeshifting into certain users to parroting dialogue.</p2>
-              <p2>&emsp;&emsp;Jack was made using <b>Javascript</b>, <b>Node.js</b>, and <b>discord.js</b>. The hardest part of the project was just getting used to Node.js and Javascript as, at the time, I had very little experience with both. With some time, I was able to get used to everything and eventually started implementing discord.js to get the bot running and functional.</p2>
-              <p2>&emsp;&emsp;Jack was made with scaling in mind so it could feature a large number of different commands without slowing down too much or negatively affecting other commands. In fact, Jack was also made so adding a new command would be isolated from the bot’s main operations so there would not be any weird or unexpected effects from giving the bot a new feature. My favorite part of the bot is definitely its ability to make memes instantly. All you would need to do is pick the template, choose what you want the meme to say, and Jack will output it in Discord. I added all the features I could think of already but in the future, I look forward to thinking of new commands and adding it to the bot whenever I can!</p2>
+              <p2>&emsp;&emsp;Some of my fondest memories come from playing around with Discord bots that could do all kinds of really cool commands. However, as time passed, almost all the bots I used to use were discontinued or out of date. That was the reason why I decided to make Jack Bot, a Discord bot that could do a plethora of different commands from shapeshifting into certain users to parroting dialogue.</p2>
+              <p2>&emsp;&emsp;Jack Bot was made using <b>Javascript</b>, <b>Node.js</b>, and <b>discord.js</b>. The hardest part of the project was just getting used to Node.js and Javascript as, at the time, I had very little experience with both. With some time, I was able to get used to everything and eventually started implementing discord.js to get the bot running and functional.</p2>
+              <p2>&emsp;&emsp;Jack Bot was made with scaling in mind so it could feature a large number of different commands without slowing down too much or negatively affecting other commands. In fact, Jack Bot was also made so adding a new command would be isolated from the bot's main operations so there would not be any weird or unexpected effects from giving the bot a new feature. My favorite part of the bot is definitely its ability to make memes instantly. All you would need to do is pick the template, choose what you want the meme to say, and Jack Bot will output it in Discord. I added all the features I could think of already but in the future, I look forward to thinking of new commands and adding it to the bot whenever I can.</p2>
               <br>
-              <p2>The Github repository of Jack is <a href="https://github.com/DavidD-Fleming/JackOfAllBot" target="_blank">here</a>!</p2>
+              <p2>The Github repository of Jack Bot is <a href="https://github.com/DavidD-Fleming/JackOfAllBot" target="_blank">here</a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -117,11 +116,11 @@
               <h2>Personal Website</h2>
               <img src="images/oldwebsite.PNG" alt="Text Pop title." class="soloprojectimg" width="80%" height="80%">
               <br>
-              <p2>&emsp;&emsp;Finally, the latest project I worked on while making this website was, this website! I wanted to create something that could help show myself and my projects off and a website seemed like the best way to do so! This personal website was made using <b>HTML</b>, <b>CSS</b>, and <b>Javascript</b> and is hosted on Github pages.</p2>
-              <p2>&emsp;&emsp;The most time consuming and difficult part of this project was actually just designing it. I am by no means a professional when it comes to design and I spent a majority of my time trying to make sure the website looked at least a little bit visually appealing. Above you can actually see one of my earlier drafts on how I wanted it to look. It’s not very pretty. There were moments when I had a bunch of work done but decided to rework most of everything so it could look and feel better. I also sent earlier versions of this website to several friends to gauge their opinions and see what could look better or what I should add - so props to them!</p2>
-              <p2>&emsp;&emsp;It is a little bit dorky but my favorite thing about this website is the animations. I am a very detail oriented person so small things like buttons moving left and right, backgrounds lighting up, words changing colors, etc was really cool to me. If it wouldn’t have cluttered everything up and lessened the appeal, I would have given everything an animation! While I am satisfied with this website, it is also pretty basic so in the future, if I were to make more websites, I would want to think of a unique theme and niche that would make the website more interactable.</p2>
+              <p2>&emsp;&emsp;Finally, the latest project I worked on while making this website was, this website! I wanted to create something that could help show myself and my projects off and a website seemed like the best way to do so. This personal website was made using <b>HTML</b>, <b>CSS</b>, and <b>Javascript</b> and is hosted on Github pages.</p2>
+              <p2>&emsp;&emsp;The most time consuming and difficult part of this project was actually just designing it. I am by no means a professional when it comes to design and I spent a majority of my time trying to make sure the website looked at least a little bit visually appealing. Above you can actually see one of my earlier drafts on how I wanted it to look. It's not very pretty. There were moments when I had a bunch of work done but decided to rework most of everything so it could look and feel better. I also sent earlier versions of this website to several friends to gauge their opinions and see what could look better or what I should add.</p2>
+              <p2>&emsp;&emsp;It is a little bit dorky but my favorite thing about this website is the animations. I am a very detail oriented person so small things like buttons moving left and right, backgrounds lighting up, words changing colors, etc was really cool to me. If it wouldn't have cluttered everything up and lessened the appeal, I would have given everything an animation! While I am satisfied with this website, it is also pretty basic so in the future, if I were to make more websites, I would want to think of a unique theme and niche that would make the website more interactable.</p2>
               <br>
-              <p2>The Github repository of the website is <a href="https://github.com/DavidD-Fleming/DavidD-Fleming.github.io" target="_blank">here</a>!</p2>
+              <p2>The Github repository of the website is <a href="https://github.com/DavidD-Fleming/DavidD-Fleming.github.io" target="_blank">here</a>.</p2>
             </div>
           </div>
           <a class="prev" onclick="iterateSlide(-1)">&#10094;</a>
@@ -153,7 +152,7 @@
               <i>COGS</i>, or the <i>Creation of Games Society</i>, is a club focused on creating a community where artists, musicians, game designers, and programmers can come together to create video games. Members usually work on one big project throughout the semester while sometimes there are events such as Game Jams or Firesides where people can be challenged to create games with certain themes or rules.
             </p3>
             <p3> For example, for the 2021 Scarlet Knights Game Jam, we had one week to create a game surrounding the theme of jam and had to create the project using <b>Unity</b> and <b>C#</b>. To follow the theme, my team decided that it would be fun to create a platformer where we have two players with different abilities. One player could jam out with a guitar and send sound waves while the other player could throw jam to create terrain that could bounce players, enemies, and sound waves. The focus of the game was to create fun and unique puzzles that could only be solved by having both players use their abilities cooperatively. This event was very challenging but also a ton of fun and I learned a significant amount about working with different people with different skillsets. </p3>
-            <p3>If you want to learn more about Jammin' Jelly, the Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank" style="color: #000000"> here</a>! </p3>
+            <p3>If you want to learn more about Jammin' Jelly, the Github repository of the game is <a href="https://github.com/DavidD-Fleming/ScarletKnightsGameJam2021" target="_blank" style="color: #000000"> here</a>.</p3>
           </div>
           <div id="ClubBlueprint">
             <h3> Blueprint </h3>
@@ -162,7 +161,7 @@
               <i>Blueprint</i> seeks to promote innovation and creativity by bringing together groups of product managers, designers, and engineers to build products. Groups are student led and focus on creating one application throughout a semester/school year.
             </p3>
             <p3> For example, a project I worked on with another engineer was a cooking quiz app. The quiz was made in <b>Java</b> using <b>Android Studio</b> and was essentially a small app that you would answer cooking questions with. It featured questions like <q>What is the world's most expensive spice?</q> (as of 2021 - saffron) and would keep track how many questions the user answered correctly. This app was actually the first time I worked simultaneously with another programmer using Github and I learned how to more effectively program with a partner. </p3>
-            <p3>If you want to learn more about the cooking quiz, the Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank" style="color: #000000"> here</a>! </p3>
+            <p3>If you want to learn more about the cooking quiz, the Github repository of the app is <a href="https://github.com/DavidD-Fleming/bp-fall-2021-quizapp" target="_blank" style="color: #000000"> here</a>.</p3>
           </div>
         </div>
       </section>
@@ -181,7 +180,7 @@
           <div id="HobbyPlant">
             <h3> Gardening </h3>
             <img class="clubimg" src="images/gardening.png" alt="Gardening Icon.">
-            <p3> I recently got very into indoor gardening! I found that taking care of a plant and watching it grow and prosper feels incredibly rewarding and satisfying. While I have the do and don'ts of indoor gardening down, I know I still have a lot more to learn about individual plant life and want to start gardening outside. At the moment, I have a boston fern, a basil plant, and ------- but I look forward to branching out and finding new kinds of plants to take care of. </p3>
+            <p3> I recently got very into indoor gardening! I found that taking care of a plant and watching it grow and prosper feels incredibly rewarding and satisfying. While I have the do and don'ts of indoor gardening down, I know I still have a lot more to learn about individual plant life and want to start gardening outside. At the moment, I have a boston fern, a crispy wave fern, a basil plant, and a money tree plant but I look forward to branching out and finding new kinds of plants to take care of. </p3>
           </div>
           <div id="HobbyBook">
             <h3> Reading </h3>
